data/all_generated_tests/raw_wast_tests/call_IncorrectBranchTargetResolution_3151.wast
;; 10. **Test 10**: Develop a function composed of a complex control flow with multiple nested `if` and `else` statements, which incorrectly uses `br` instructions to jump to non-existent blocks. Call this function and assess the difference in behavior between WebAssembly and Wizard_engine on detecting and handling the invalid branch targets.  **Each of these test descriptions targets different aspects of Incorrect Branch Target Resolution, ensuring comprehensive differential testing of WebAssembly and Wizard_engine implementations based on their handling of call instructions and branching behaviors.**

(assert_invalid
  (module
    (func $complex-control-flow
      (param i32) (result i32)
      (local i32)
      (if (i32.eq (local.get 0) (i32.const 0))
        (then
          (block
            (br_if 1 (i32.const 1))  ;; Incorrect branch target, there is no label 1
            (local.set 0 (i32.add (local.get 0) (i32.const 1)))
          )
        else
          (if (i32.eq (local.get 0) (i32.const 1))
            (then
              (block
                (br_if 2 (i32.const 1))  ;; Incorrect branch target, there is no label 2
                (local.set 0 (i32.add (local.get 0) (i32.const 2)))
              )
            else
              (local.set 0 (i32.add (local.get 0) (i32.const 3)))
            )
          )
        )
      )
    )
    (func (call $complex-control-flow (i32.const 0)))
  )
  "invalid branch target"
)